# job-trend-analyzer-api-lambda

./: .gitignore  README.md  pyproject.toml
.github/workflows/: deploy.yml  test.yml
src/app/: aws_secrets_manager_connector.py  get_data.py  lambda_function.py  main.py  repository.py  transformers.py
src/app/db/: __init__.py  operations.py
tests/: test_db.py  test_lambda_function.py  test_main.py  test_repository.py  test_transformers.py
